[package]
name = "rust_bitcoin_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bitcoin_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { path = "../dependencies/rust-bitcoin/bitcoin" }
miniscript = "11.0.0"

[patch.crates-io]
base58ck = { path = "../dependencies/rust-bitcoin/base58" }
bitcoin-io = { path = "../dependencies/rust-bitcoin/io" }
bitcoin-internals = { path = "../dependencies/rust-bitcoin/internals" }
bitcoin-units = { path = "../dependencies/rust-bitcoin/units" }
bitcoin_hashes = { path = "../dependencies/rust-bitcoin/hashes" }